console-setup (1.196) UNRELEASED; urgency=medium

  [ Anton Zinoviev ]
  * Keyboard/ckb: update with keyboard data of version 2.29 of xkb files.
    (This change is not relevant for the binary packages in Debian.)

 -- Anton Zinoviev <zinoviev@debian.org>  Thu, 07 May 2020 21:28:16 +0300

console-setup (1.195) unstable; urgency=medium

  [ Mantas Kriaučiūnas ]
  * Fix Lithuanian layout Closes: #951387
    in keyboard-configuration.config: replace not intuitive second lt(us)
    layout with us(altgr-intl), which contains Euro (€) and other symbols,
    often used in Lithuania. us layout is used by the majority of
    Lithuanian users as second layout.

  [ D-I role ]
  * [l10n]  Commit changed/added po files (from l10n-sync run at dillon)

 -- Dimitri John Ledkov <xnox@ubuntu.com>  Thu, 26 Mar 2020 13:34:12 +0000

console-setup (1.194) unstable; urgency=medium

  * Team upload

  [ Julien Cristau ]
  * keyboard_present: don't check for Linux 1.x.  Thanks, Ansgar!

  [ Updated translations ]
  * Portuguese (pt.po) by Miguel Figueiredo
  * Tamil (ta.po) by leela
  * Traditional Chinese (zh_TW.po) by Walter Cheuk

 -- Holger Wansing <hwansing@mailbox.org>  Sun, 17 Nov 2019 22:42:11 +0100

console-setup (1.193) unstable; urgency=medium

  * Team upload

  [ Updated translations ]
  * Croatian (hr.po) by gogogogi
  * Tajik (tg.po) by Victor Ibragimov

 -- Holger Wansing <hwansing@mailbox.org>  Sun, 04 Aug 2019 12:08:32 +0200

console-setup (1.192) unstable; urgency=medium

  * Remove Christian Perrier from Uploaders, with many thanks for all
    his contributions over the years! (Closes: #927511)
  * Merge patch by Iain Lane to fix internationalization issues when
    switching locales with Perl >= 5.28 (Closes: #924657, LP: #1817453).

 -- Cyril Brulebois <kibi@debian.org>  Thu, 04 Jul 2019 17:41:47 +0200

console-setup (1.191) unstable; urgency=medium

  * Team upload

  [ Updated translations ]
  * Punjabi (Gurmukhi) (pa.po) by Aman ALam