@@ -151,7 +151,6 @@
   macbook78       MacBook/MacBook Pro
   macbook79       MacBook/MacBook Pro (intl.)
   macintosh       Macintosh
-  macintosh_old   Macintosh Old
   macintosh_hhk   Happy Hacking for Mac
   acer_c300       Acer C300
   acer_ferrari4k  Acer Ferrari 4000
