@@ -120,7 +120,7 @@ layout=${layout#>}
 variant=${variant#>}
 
 case "$model" in
-    amiga|ataritt|macintosh_old|pc105|sun4|sun5)
+    amiga|ataritt|pc105|sun4|sun5)
 	;;
     *)
 	model=pc105
