@@ -293,7 +293,6 @@ my %keycodes = (
     'amiga' => 'amiga(de)',
     'ataritt' => 'ataritt(de)',
     'macintosh' => 'xfree86',
-    'macintosh_old' => 'macintosh',
     'pc105' => 'xfree86',
     'sun4' => 'sun(type4_euro)',
     'sun5' => 'sun(type5_euro)',
