@@ -5,7 +5,6 @@ console-setup
 console-setup-amiga-ekmap
 console-setup-ataritt-ekmap
 console-setup-fonts-udeb
-console-setup-macintoshold-ekmap
 console-setup-mini
 console-setup-mini.config
 console-setup-pc-ekmap
