@@ -429,7 +429,7 @@ case "$arch" in
 	model_priority=medium
 	;;
     m68k/mac)
-	XKBMODEL=macintosh_old
+	XKBMODEL=macintosh
 	model_priority=medium
 	;;
     m68k/sun*)
@@ -453,7 +453,7 @@ case "$arch" in
 	model_priority=medium
 	;;
     powerpc/chrp*)
-	XKBMODEL=pc105 # UNKNOWN: pc105, macintosh_old or maybe amiga
+	XKBMODEL=pc105 # UNKNOWN: pc105, macintosh or maybe amiga
 	model_priority=critical
 	;;
     powerpc/mac)
