@@ -4,6 +4,9 @@ console-setup (1.196) UNRELEASED; urgency=medium
   * Keyboard/ckb: update with keyboard data of version 2.29 of xkb files.
     (This change is not relevant for the binary packages in Debian.)
 
+  [ Laurent Vivier ]
+  * Drop macintosh_old layout and replace it with the macintosh layout.
+
  -- Anton Zinoviev <zinoviev@debian.org>  Thu, 07 May 2020 21:28:16 +0300
 
 console-setup (1.195) unstable; urgency=medium
